samples/_failures_safe/1761703624_774329_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8680a64.c: In function ‘main’:
./samples/SAFE/__tmp_f8680a64.c:161:9: error: expected expression at end of input
  161 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_f8680a64.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8680a64.c:161:9: error: expected declaration or statement at end of input
